--- a/sway/config
+++ b/sway/config
@@ -52,8 +52,8 @@ bindsym $mod+d exec "wofi -s .config/wofi/style.css --hide-scroll --lines 6 --wi
 bindsym $mod+Shift+q kill
 
 # Screen brightness controls
-bindsym XF86MonBrightnessUp exec --no-startup-id "xbacklight -inc 10"
-bindsym XF86MonBrightnessDown exec --no-startup-id "xbacklight -dec 10"
+bindsym XF86MonBrightnessUp exec --no-startup-id "backlight_control +10"
+bindsym XF86MonBrightnessDown exec --no-startup-id "backlight_control -10"
 
 # Start Applications
 bindsym $mod+w exec --no-startup-id firefox
