--- a/sway/config
+++ b/sway/config
@@ -10,8 +10,8 @@ input type:touchpad {
 }
 
 # display configurations for my desk, using information from a good wdisplays setup
-output eDP-1 pos 2480 670 mode 2880x1800@60Hz scale 1.5 scale_filter smart bg bg1.jpg fill
-output DP-3 pos 0 670 mode 2560x1440@60Hz scale 1.0 scale_filter nearest bg bg1.jpg fill
+output eDP-1 pos 2480 670 mode 2880x1800@60Hz scale 1.5 scale_filter smart
+output DP-3 pos 0 670 mode 2560x1440@60Hz scale 1.0 scale_filter nearest
 
 #--------------------------------------------------
 
@@ -43,7 +43,7 @@ font xft:URWGothic-Book 11
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec --no-startup-id alacritty 
+bindsym $mod+Return exec alacritty 
 
 # Run wofi
 bindsym $mod+d exec "wofi -s .config/wofi/style.css --hide-scroll --lines 6 --width 1000 --columns 1 -S run --location top --yoffset 100"
@@ -52,12 +52,12 @@ bindsym $mod+d exec "wofi -s .config/wofi/style.css --hide-scroll --lines 6 --wi
 bindsym $mod+Shift+q kill
 
 # Screen brightness controls
-bindsym XF86MonBrightnessUp exec --no-startup-id "backlight_control +10"
-bindsym XF86MonBrightnessDown exec --no-startup-id "backlight_control -10"
+bindsym XF86MonBrightnessUp exec "backlight_control +10"
+bindsym XF86MonBrightnessDown exec  "backlight_control -10"
 
 # Start Applications
-bindsym $mod+w exec --no-startup-id firefox
-bindsym $mod+f exec --no-startup-id ranger
+bindsym $mod+w exec  librewolf
+bindsym $mod+f exec ranger
 
 focus_follows_mouse yes
 
@@ -189,13 +189,13 @@ bindsym $mod+Shift+e exec "swaymsg exit"
 bindsym $mod+0 mode "$mode_system"
 set $mode_system (l)ock, (e)xit, switch_(u)ser, (s)uspend, (h)ibernate, (r)eboot, (Shift+s)hutdown
 mode "$mode_system" {
-    bindsym l exec --no-startup-id i3exit lock, mode "default"
-    bindsym s exec --no-startup-id i3exit suspend, mode "default"
-    bindsym u exec --no-startup-id i3exit switch_user, mode "default"
-    bindsym e exec --no-startup-id i3exit logout, mode "default"
-    bindsym h exec --no-startup-id i3exit hibernate, mode "default"
-    bindsym r exec --no-startup-id i3exit reboot, mode "default"
-    bindsym Shift+s exec --no-startup-id i3exit shutdown, mode "default"
+    bindsym l exec i3exit lock, mode "default"
+    bindsym s exec i3exit suspend, mode "default"
+    bindsym u exec i3exit switch_user, mode "default"
+    bindsym e exec i3exit logout, mode "default"
+    bindsym h exec i3exit hibernate, mode "default"
+    bindsym r exec i3exit reboot, mode "default"
+    bindsym Shift+s exec i3exit shutdown, mode "default"
 
     # exit system mode: "Enter" or "Escape"
     bindsym Return mode "default"
@@ -227,11 +227,11 @@ mode "resize" {
 }
 
 # Autostart applications
-exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec --no-startup-id nm-applet
-exec --no-startup-id xfce4-power-manager
-exec_always --no-startup-id ff-theme-util
-exec_always --no-startup-id fix_xcursor
+exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec nm-applet
+exec xfce4-power-manager
+exec_always ff-theme-util
+exec_always fix_xcursor
 
 # Theme colors
 # class                   border  backgr. text    indic.  child_border
