Added additional battery states
Added GTK custom color definitions for nord

--- a/waybar/config
+++ b/waybar/config
@@ -46,6 +46,7 @@
     "battery": {
         "interval": 10,
         "states": {
+	    "normal": 100,
             "warning": 30,
             "critical": 15
         },
