--- a/waybar/config
+++ b/waybar/config
@@ -66,7 +66,7 @@
 
     "clock#time": {
         "interval": 1,
-        "format": "{:%H:%M}",
+        "format": "{:%I:%M %p}",
         "tooltip": false
     },
 
@@ -80,6 +80,7 @@
         "interval": 5,
         "format": "  {usage}% ({load})", // Icon: microchip
         "states": {
+	  "normal": 0,
           "warning": 70,
           "critical": 90
         }
@@ -90,17 +91,23 @@
         "interval": 5,
         "format": "  {}%", // Icon: memory
         "states": {
-            "warning": 70,
+	    "normal": 0,
+            "warning": 30,
             "critical": 90
         }
     },
 
     "network": {
         "interval": 5,
-        "format-wifi": "  {essid} ({signalStrength}%)", // Icon: wifi
+        "format-wifi": "  {essid}", // Icon: wifi
         "format-ethernet": "  {ifname}: {ipaddr}/{cidr}", // Icon: ethernet
         "format-disconnected": "⚠  Disconnected",
-        "tooltip-format": "{ifname}: {ipaddr}"
+        "tooltip-format": "{ifname}: {ipaddr}",
+	"states": {
+	    "normal": 60,
+ 	    "warning": 30,
+	    "critical": 10
+	}
     },
 
     "sway/mode": {
@@ -143,6 +150,12 @@
     //        "car": "",
             "default": ["", ""]
         },
+	"states": {
+	    "low": 0,
+	    "low-medium": 21,
+	    "medium": 30,
+	    "high": 50 
+	},
         "on-click": "pavucontrol"
     },
 
@@ -157,6 +170,14 @@
           "", // Icon: temperature-three-quarters
           ""  // Icon: temperature-full
       ],
+      "states": {
+	  "cool": 20,
+	  "low": 40,
+	  "low-medium": 50,
+	  "medium": 60,
+	  "medium-high": 70,
+	  "high": 75
+      },
       "tooltip": true
     },
 
