--- a/sway/config
+++ b/sway/config
@@ -269,16 +269,24 @@ smart_gaps off
 smart_borders off
 
 # Press $mod+Shift+g to enter the gap mode. Choose o or i for modifying outer/inner gaps. Press one of + / - (in-/decrement for current workspace) or 0 (remove gaps for current workspace). If you also press Shift with these keys, the change will be global for all workspaces.
-set $mode_gaps Gaps: (o) outer, (i) inner
+set $mode_gaps Gaps: (o) outer,		 (i) inner,	 (r) reset
 set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
 set $mode_gaps_inner Inner Gaps: +|-|0 (local), Shift + +|-|0 (global)
+set $mode_gaps_reset Inner Gaps: (i), Outer Gaps (o)
 bindsym $mod+Shift+g mode "$mode_gaps"
 
 mode "$mode_gaps" {
         bindsym o      mode "$mode_gaps_outer"
         bindsym i      mode "$mode_gaps_inner"
         bindsym Return mode "default"
+	bindsym r      mode "$mode_gaps_reset"
         bindsym Escape mode "default"
+}
+mode "$mode_gaps_reset" {
+	bindsym o	gaps outer all set -2
+	bindsym i	gaps inner all set 10
+	bindsym Return mode "default"
+	bindsym Escape mode "default"
 }
 mode "$mode_gaps_inner" {
         bindsym plus  gaps inner current plus 5
