--- a/sway/config
+++ b/sway/config
@@ -18,6 +18,10 @@ for_window [app_id="Alacritty"] opacity $opacity
 output eDP-1 pos 7352 758 mode 2880x1800@60Hz scale 1.5 scale_filter smart bg bg2.jpg fill
 output DP-1 pos 4400 758 mode 3840x2160@60Hz scale 1.3 scale_filter smart bg bg2.jpg fill
 output DP-4 pos 2960 0 mode 2560x1440@60Hz transform 270 scale 1 scale_filter smart bg bg2.jpg fill
+
+# Sometimes wayland has different display ID's. These two are to cover that occasion.
+output DP-2 pos 4400 758 mode 3840x2160@60Hz scale 1.3 scale_filter smart bg bg2.jpg fill
+output DP-3 pos 2960 0 mode 2560x1440@60Hz transform 270 scale 1 scale_filter smart bg bg2.jpg fill
 #--------------------------------------------------
 
 
